# CriticalInfrastructure

./: .gitignore  Cargo.toml  LICENSE  README.md  bootstrap.html  deny.toml  efuse-harden.sh  flash-udp.sh  flash.sh  generate_keys.rs  patch_blocks.py  patch_esp32.py  patch_esp32_keys.py  patch_storage.py  patch_warnings.py  patch_webapp.py  patch_webapp_keys.py  proxy.php  run_dashboard.sh  run_gui.sh  test_i2c.rs
.agents/: AGENTS.md
bootloader-build/: sdkconfig.defaults
clients/apple/: .gitignore  CriticalInfra.entitlements  Local.xcconfig.example  Package.swift  README.md  project.yml
clients/apple/AppSources/: AppModel.swift  ContentView.swift  CriticalInfraApp.swift  RoleStyle.swift  ScriptRunner.swift  ShowcasePanel.swift  TerminalLauncher.swift
clients/apple/Assets.xcassets/AppIcon.appiconset/: Contents.json
clients/apple/CriticalInfra.xcodeproj/: project.pbxproj
clients/apple/CriticalInfra.xcodeproj/xcshareddata/xcschemes/: CriticalInfra.xcscheme
clients/apple/Sources/CriticalInfraKit/: BleTransport.swift  CommandEnvelope.swift  CommandSigner.swift  Commands.swift  DeviceClient.swift  DeviceConfig.swift  EnclaveSigner.swift  Hex.swift  PIVSigner.swift  Provisioning.swift  Showcase.swift  Transport.swift  UdpTransport.swift
clients/apple/Tests/CriticalInfraKitTests/: ChunkAssemblerTests.swift  EnvelopeTests.swift  FrameChunkerTests.swift  ShowcaseCatalogTests.swift
docs/formal/: BLE-TRANSPORT.md  EFUSE-HARDENING.md  OTA.md  PQC-FOLLOWUP.md  README.md  SECURE-BOOT-V2.md  UDP-TRANSPORT.md  dashboard.spthy  ota.spthy  verify.sh
esp-wifi-patched/: Cargo.toml
esp-wifi-patched/src/ble/: btdm.rs
gui-client/: Cargo.toml  ip_config.txt
gui-client/src/: main.rs
master-cli/: Cargo.toml
master-cli/src/: main.rs
provision/: 0-toolchains.sh  1-enroll-key.sh  2-efuse-harden.sh  3-build-sign.sh  4-flash-enable-secureboot.sh  5-flash-app.sh  6-release-seal.sh  README.md  lib.sh  ota-apply.sh  ota-attack-test.sh  ota-backup-signer-test.sh  ota-flash-slots.sh  ota-push.sh  ota-switch-slot.sh  ota-thetis-test.sh  ota-update.sh  show-device-keys.sh  store-creds.sh  verify-seal.sh
secure-boot/: .gitignore  CMakeLists.txt  README.md  flash-signed-app.sh  hsm-config.ini.example  partitions.csv  sdkconfig.defaults  sign-secure-boot.sh
secure-boot/main/: main.c
shared/: Cargo.toml
shared/src/: lib.rs
supervisor-web/: .htaccess  Cargo.toml  Trunk.toml  index.html  style.css  test_js4.mjs
supervisor-web/src/: crypto.rs  main.rs  state.rs  view.rs  webauthn.rs
target-esp32s3/: Cargo.toml  app_desc.x  build.rs  link.x
target-esp32s3/.cargo/: config.toml
target-esp32s3/src/: ble.rs  bootsig.rs  clientauth.rs  commands.rs  crypto.rs  http.rs  identity.rs  main.rs  net.rs  ota.rs  protocol.rs  sensor.rs  state.rs  storage.rs
