[package]
name = "master-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
rand_core = { version = "0.6", features = ["std"] }
tokio = { version = "1.36", features = ["full"] }
postcard = { version = "1.0", features = ["alloc"] }
