[package]
name = "supervisor-web"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { version = "0.21.0", features = ["csr"] }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Window", "Request", "RequestInit", "RequestMode", "Response", "Storage", "HtmlSelectElement"] }

x25519-dalek = { version = "2.0.1", features = ["static_secrets"] }
ed25519-dalek = { version = "2.1", features = ["rand_core"] }
aes-gcm = "0.10"
rand_core = { version = "0.6", features = ["getrandom"] }
getrandom = { version = "0.2", features = ["js"] }
hex = "0.4"
gloo-storage = "0.4.0"
sha2 = "0.11.0"
shared = { version = "0.1.0", path = "../shared" }
