[package]
name = "target-esp32s3"
version = "0.1.0"
edition = "2021"

[features]
# Transport flavor -- mutually exclusive, enforced by a compile_error! in main.
# `http-transport` (default) keeps the browser-reachable HTTP/1.1 endpoint;
# `udp-transport` swaps it for a raw UDP datagram loop for native clients.
# See docs/formal/UDP-TRANSPORT.md.
default = ["http-transport"]
http-transport = []
# The UDP flavor authenticates clients with P-256 ECDSA (Secure Enclave / hardware
# security keys), so it pulls in the p256 crate; the HTTP flavor stays Ed25519-only.
udp-transport = ["dep:p256"]

# Derive the device identity from a read-protected eFuse HMAC key via the
# hardware HMAC-SHA256 peripheral (the key never leaves hardware). Requires the
# eFuse key to be provisioned; OFF by default so dev builds keep the RNG/flash
# path. See docs/formal/EFUSE-HARDENING.md.
efuse-hmac-identity = []

# Test-only: on boot from ota_0, self-copy the running image into the inactive OTA
# slot, activate it, and reset — exercises the OTA apply path with no network.
# See docs/formal/OTA.md step 4.2. Never enable in a production image.
ota-selftest = []

# Network OTA: run a TCP server (:8081) that receives a length-prefixed signed image
# and installs it into the inactive slot. See docs/formal/OTA.md step 4.3. The port is
# currently unauthenticated (Secure Boot is the integrity backstop) — gating it via the
# supervisor channel is a follow-up.
ota-net = []

[dependencies]
shared = { path = "../shared" }
ed25519-dalek = { version = "2.1.1", default-features = false }
# P-256 ECDSA verification for the UDP flavor's client auth. Optional: only the
# udp-transport build enables it (see [features]). no_std, verify-only.
p256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
postcard = "1.0"

esp-backtrace = { version = "0.15.0", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "=1.0.0-rc.0", features = ["esp32s3", "unstable"] }
smart-leds = "0.4.0"
esp-println = { version = "0.13.0", features = ["esp32s3", "log"] }
log = "0.4"
fugit = "0.4.0"
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32s3"] }
ws2812-spi = "0.5.1"
esp-wifi = { version = "0.15.1", features = ["esp32s3", "wifi", "log-04"] }
esp-alloc = { version = "0.8.0" }
embassy-executor = { version = "0.7.0", features = ["executor-thread", "task-arena-size-32768"] }
embassy-time = "0.5.1"
embassy-net = { version = "0.9.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "log"] }
esp-hal-embassy = { version = "0.9.1", features = ["esp32s3", "log-04"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
lcd1602-driver = "0.3.0"
heapless = { version = "0.8", features = ["serde"] }
embassy-futures = "0.1.2"
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
# 0.10 (not 0.11): keeps a single RustCrypto trait generation in the firmware,
# coherent with the dalek crates. The AES-GCM algorithm is identical; 0.11 is
# trait/API churn and would duplicate digest/crypto-common in flash.
# The ESP32-S3 AES peripheral has no GCM mode (esp-hal exposes only ECB/CBC/CTR/
# CFB/OFB), so GCM stays in constant-time software here.
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
esp-storage = { version = "0.7.0", features = ["esp32s3"] }
embedded-storage = "0.3.1"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
sha2 = { version = "0.11.0", default-features = false }
critical-section = "1.2.0"
