[package]
name = "target-esp32s3"
version = "0.1.0"
edition = "2021"

[features]
# The device speaks a raw UDP datagram protocol to native clients (the macOS app /
# PIV hardware key), authenticating them with P-256 ECDSA (Secure Enclave / hardware
# security keys) — so it pulls in the p256 crate. See docs/formal/UDP-TRANSPORT.md.
default = ["udp-transport"]
# Wi-Fi is scoped to udp-transport (not hardcoded on esp-radio) so a pure `ble-transport` build
# links esp-radio with ONLY the `ble` feature — matching the upstream bas_peripheral example.
udp-transport = ["esp-radio/wifi", "dep:p256"]

# BLE transport: the device runs a BLE GATT server instead of Wi-Fi/UDP, carrying the SAME command
# envelope. Client auth is still P-256. See docs/formal/UDP-TRANSPORT.md (transport-independent
# envelope). A hybrid build (udp+ble) links both radios; a `--no-default-features --features
# ble-transport` build links esp-radio BLE-only (no Wi-Fi, no coex) for the spare-board bring-up test.
ble-transport = ["esp-radio/ble", "dep:trouble-host", "dep:bt-hci", "dep:embassy-sync", "dep:heapless-v09", "dep:p256"]

# Derive the device identity from a read-protected eFuse HMAC key via the
# hardware HMAC-SHA256 peripheral (the key never leaves hardware). Requires the
# eFuse key to be provisioned; OFF by default so dev builds keep the RNG/flash
# path. See docs/formal/EFUSE-HARDENING.md.
efuse-hmac-identity = []

# Test-only: on boot from ota_0, self-copy the running image into the inactive OTA
# slot, activate it, and reset — exercises the OTA apply path with no network.
# See docs/formal/OTA.md step 4.2. Never enable in a production image.
ota-selftest = []

# Network OTA: run a TCP server (:8081) that receives a length-prefixed signed image and
# installs it into the inactive slot. See docs/formal/OTA.md step 4.3. The image's own Secure
# Boot v2 (RSA-3072-PSS) signature is verified at receive, before the slot is activated, so an
# unsigned/garbage push is never booted (no reboot churn); anti-rollback rejects downgrades.
# Pulls `rsa` (and its sha2 0.10) — a second trait generation the crate otherwise avoids, but
# there is ~1 MB free per slot and verify-before-activate is worth it.
ota-net = ["dep:rsa"]

[dependencies]
shared = { path = "../shared" }
ed25519-dalek = { version = "2.1.1", default-features = false }
# P-256 ECDSA verification for the UDP flavor's client auth. Optional: only the
# udp-transport build enables it (see [features]). no_std, verify-only.
p256 = { version = "0.13", default-features = false, features = ["ecdsa"], optional = true }
# RSA-3072-PSS verification of an incoming OTA image's Secure Boot v2 signature, at receive
# time. Optional: only the ota-net build enables it. no_std + alloc, verify-only (no RNG).
# Brings its own sha2 0.10 / digest generation; accepted for verify-before-activate (see [features]).
rsa = { version = "0.9", default-features = false, features = ["sha2"], optional = true }
# BLE host stack + HCI types (ble-transport). esp-radio 0.18's BleConnector implements
# bt_hci 0.8 traits; trouble-host 0.6 is the release built against bt-hci 0.8 (trouble 0.7
# moved to bt-hci 0.9 — bump both together with esp-radio).
trouble-host = { version = "0.6.0", features = ["derive", "default-packet-pool-mtu-255"], optional = true }
bt-hci = { version = "0.8", optional = true }
# The trouble gatt_server/gatt_service macros expand to `embassy_sync::...` in this crate's
# scope; must match the version trouble-host 0.6 uses (0.7 — upstream: "update once trouble
# supports 0.8"; embassy-net here is on the same 0.7 generation).
embassy-sync = { version = "0.7", optional = true }
# trouble implements AsGatt/FromGatt for ITS heapless generation (0.9); the rest of this crate
# is on heapless 0.8, so alias 0.9 just for the GATT characteristic value types in ble.rs.
heapless-v09 = { package = "heapless", version = "0.9", optional = true }
postcard = "1.0"

esp-backtrace = { version = "0.19.0", features = ["esp32s3", "panic-handler", "println"] }
esp-hal = { version = "1.1.1", features = ["esp32s3", "unstable", "log-04"] }
smart-leds = "0.4.0"
esp-println = { version = "0.17.0", features = ["esp32s3", "log-04"] }
log = "0.4"
fugit = "0.4.0"
esp-bootloader-esp-idf = { version = "0.5.0", features = ["esp32s3"] }
ws2812-spi = "0.5.1"
# `wifi`/`ble` are enabled by the udp-transport / ble-transport features, not hardcoded, so a
# BLE-only build doesn't drag in the Wi-Fi controller. See [features].
esp-radio = { version = "0.18.0", features = ["esp32s3", "log-04", "unstable"] }
# esp-rtos replaces both esp-hal-embassy (embassy executor/time driver) and esp-wifi's old
# builtin scheduler: a real priority scheduler implementing esp-radio-rtos-driver. This is the
# layer whose 0.15.1-era predecessor deadlocked the S3 BT controller handshake.
esp-rtos = { version = "0.3.0", features = ["esp32s3", "esp-radio", "embassy", "log-04"] }
esp-alloc = { version = "0.10.0" }
# Task arena is sized via the EMBASSY_EXECUTOR_TASK_ARENA_SIZE env var since 0.10
# (set in .cargo/config.toml), replacing the old task-arena-size-* features.
embassy-executor = "0.10.0"
embassy-time = "0.5.1"
embassy-net = { version = "0.9.1", features = ["tcp", "udp", "dhcpv4", "medium-ethernet", "log"] }
static_cell = { version = "2.1.1", features = ["nightly"] }
lcd1602-driver = "0.3.0"
heapless = { version = "0.8", features = ["serde"] }
embassy-futures = "0.1.2"
x25519-dalek = { version = "2.0.1", default-features = false, features = ["static_secrets"] }
# 0.10 (not 0.11): keeps a single RustCrypto trait generation in the firmware,
# coherent with the dalek crates. The AES-GCM algorithm is identical; 0.11 is
# trait/API churn and would duplicate digest/crypto-common in flash.
# The ESP32-S3 AES peripheral has no GCM mode (esp-hal exposes only ECB/CBC/CTR/
# CFB/OFB), so GCM stays in constant-time software here.
aes-gcm = { version = "0.10", default-features = false, features = ["aes"] }
esp-storage = { version = "0.9.0", features = ["esp32s3"] }
embedded-storage = "0.3.1"
serde = { version = "1.0.228", features = ["derive"], default-features = false }
sha2 = { version = "0.11.0", default-features = false }
critical-section = "1.2.0"

